<resources>
    <string name="app_name">EyouApp</string>

    <!--华丽的分割线-->
    <string name="app_dialog_loading">努力加载中 &#8230;</string>
    <string name="app_dialog_cancel">取消</string>
    <string name="app_dialog_retry_msg">请求失败！</string>
    <string name="app_dialog_retry_positive_btn">重试</string>
    <string name="app_dialog_title_tips">温馨提示</string>
    <string name="app_dialog_title_ip_list">请输入网址和IP</string>
    <string name="app_request_error">网络错误，请稍后再试</string>
    <string name="app_request_fail">请求失败，请稍后再试</string>
    <string name="app_request_unlogin">未登录，请登录重试</string>


    <string name="app_dialog_ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="remark">备注</string>
    <string name="modify">修改</string>
    <string name="status">订单状态</string>
    <string name="order_price">总价</string>
    <string name="order_uuid">编号</string>
    <string name="reference_number">Reference Number</string>
    <string name="vendor_phone">行程商电话</string>
    <string name="agent_name">代理商</string>
    <string name="agent_order_id">代理商订单号</string>
    <string name="ticket_date">出行日期</string>
    <string name="gathering_place">集合地点</string>
    <string name="gathering_time">集合时间</string>
    <string name="ticket_time">场次</string>
    <string name="primary_contact">主要联系人</string>
    <string name="first_name">名</string>
    <string name="last_name">姓</string>
    <string name="email">Email</string>
    <string name="primary_contact_phone">联系电话</string>
    <string name="sku_name">sku名称</string>
    <string name="add_ticket">添加</string>
    <string name="order_ticket">票</string>
    <string name="submit">提交</string>
    <string name="edit">编辑</string>
    <string name="show_ticket">查看票</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="weight">体重</string>
    <string name="sale_price">官网价格</string>
    <string name="cost_price">核算价格</string>
    <string name="separator">:</string>
    <string name="ticket_name">票种</string>
    <string name="delete">删除</string>
    <string name="add_ticket_title">添加票</string>
    <string name="choose_date">选择日期</string>
    <string name="add">添加</string>
</resources>
