<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bsl_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_order_detail"
        tools:context="com.fitibo.eyouapp.order.OrderDetailActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/sku_name"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_sku"/>
            <EditText
                    android:id="@+id/et_sku"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/status"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_status"/>
            <EditText
                    android:id="@+id/et_status"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/order_price"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_price"/>
            <EditText
                    android:id="@+id/et_price"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/order_uuid"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_uuid"/>
            <EditText
                    android:id="@+id/et_uuid"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/reference_number"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_reference_number"/>
            <EditText
                    android:id="@+id/et_reference_number"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/vendor_phone"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_vendor_phone"/>
            <EditText
                    android:id="@+id/et_vendor_phone"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/agent_name"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_agent_name"/>
            <EditText
                    android:id="@+id/et_agent_name"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/agent_order_id"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_agent_order_id"/>
            <EditText
                    android:id="@+id/et_agent_order_id"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/ticket_date"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_ticket_date"/>
            <EditText
                    android:id="@+id/et_ticket_date"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/gathering_place"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_gathering_place"/>
            <EditText
                    android:id="@+id/et_gathering_place"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/gathering_time"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_gathering_time"/>
            <EditText
                    android:id="@+id/et_gathering_time"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/ticket_time"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_ticket_time"/>
            <EditText
                    android:id="@+id/et_ticket_time"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/remark"
                    android:labelFor="@+id/et_remark"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_remark"/>
            <EditText
                    android:id="@+id/et_remark"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/primary_contact"
                    style="@style/TextViewLabelNormalVertical"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    android:baselineAligned="false">
                <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                            android:text="@string/first_name"
                            style="@style/TextViewLabelNormalVertical"
                            android:id="@+id/tv_first_name"/>
                    <EditText
                            android:id="@+id/et_first_name"
                            style="@style/MainEditText"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                            android:text="@string/last_name"
                            style="@style/TextViewLabelNormalVertical"
                            android:id="@+id/tv_last_name"/>
                    <EditText
                            android:id="@+id/et_last_name"
                            style="@style/MainEditText"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:text="@string/email"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_primary_contact_email"/>
            <EditText
                    android:id="@+id/et_primary_contact_email"
                    style="@style/MainEditText"/>
            <TextView
                    android:text="@string/primary_contact_phone"
                    style="@style/TextViewLabelNormalVertical"
                    android:id="@+id/tv_primary_contact_phone"/>
            <EditText
                    android:id="@+id/et_primary_contact_phone"
                    style="@style/MainEditText"/>
        </LinearLayout>
    </ScrollView>
</com.flipboard.bottomsheet.BottomSheetLayout>
