<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/corners_bg"
              android:layout_margin="10dp"
              android:padding="10dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/ticket_name"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:text="@string/separator"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:id="@+id/tv_ticket_ticket_name"
                style="@style/MainTextView"
                android:layout_weight="1"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corners_primary"
                android:padding="5dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:textColor="@color/white"
                android:id="@+id/btn_delete"
                android:text="@string/delete"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/ticket_date"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:text="@string/separator"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:id="@+id/tv_ticket_ticket_date"
                style="@style/MainTextView"/>
        <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/ticket_time"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:text="@string/separator"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:id="@+id/tv_ticket_ticket_time"
                style="@style/MainTextView"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:text="@string/cost_price"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:text="@string/separator"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:id="@+id/tv_ticket_cost_price"
                style="@style/MainTextView"/>
        <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/sale_price"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:text="@string/separator"
                style="@style/MainTextViewLabel"/>
        <TextView
                android:id="@+id/tv_ticket_sale_price"
                style="@style/MainTextView"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:baselineAligned="false">
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:text="@string/name"
                    style="@style/MainTextViewLabel"
                    android:id="@+id/tv_name"/>
            <EditText
                    android:id="@+id/et_name"
                    style="@style/MainEditText"/>
        </LinearLayout>
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:text="@string/age"
                    style="@style/MainTextViewLabel"
                    android:id="@+id/tv_age"/>
            <EditText
                    android:id="@+id/et_age"
                    style="@style/MainEditText"/>
        </LinearLayout>
        <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:text="@string/weight"
                    style="@style/MainTextViewLabel"
                    android:id="@+id/tv_weight"/>
            <EditText
                    android:id="@+id/et_weight"
                    style="@style/MainEditText"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>