<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    style="@style/MainTextViewLabel"
                    android:text="@string/add_ticket_title"
                    android:layout_weight="1"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners_primary"
                    android:padding="5dp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textColor="@color/white"
                    android:id="@+id/btn_add"
                    android:text="@string/add"/>
        </LinearLayout>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:id="@+id/sp_ticket_select">

        </Spinner>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corners_primary"
                    android:padding="5dp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:textColor="@color/white"
                    android:id="@+id/btn_choose_date"
                    android:text="@string/choose_date"/>
            <TextView
                    style="@style/MainTextViewLabel"
                    android:id="@+id/tv_chosen_date"/>
        </LinearLayout>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:id="@+id/sp_ticket_time_select">

        </Spinner>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:baselineAligned="false">
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:text="@string/name"
                        style="@style/MainTextViewLabel"
                        android:id="@+id/tv_name"/>
                <EditText
                        android:id="@+id/et_name"
                        style="@style/MainEditText"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:text="@string/age"
                        style="@style/MainTextViewLabel"
                        android:id="@+id/tv_age"/>
                <EditText
                        android:id="@+id/et_age"
                        style="@style/MainEditText"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:text="@string/weight"
                        style="@style/MainTextViewLabel"
                        android:id="@+id/tv_weight"/>
                <EditText
                        android:id="@+id/et_weight"
                        style="@style/MainEditText"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
